--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         </div>
     </div>
     <div class="buttons">
-        <a href="#" class="button" id="twitter" title="Tweet this quote"><img src="/img/tw.png" alt="Next Quote">
+        <a href="#" class="button" id="twitter" title="Tweet this quote"><img src="img/twitter.png" alt="Tweet">
         </a></a>
-        <a href="#" class="button" id="next-quote" title="Next Quote"><img src="/img/quote.png" alt="Next Quote"></a>
+        <a href="#" class="button" id="next-quote" title="Next Quote"><img src="img/quo.png" alt="Next Quote"></a>
     </div>
     
     <footer>
