--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="#" class="button" id="next-quote" title="Next Quote">
             <img src="img/quo.png" alt="Next Quote">
         </a>
-        <a href="#" target="_blank" class="button" id="twitter" title="Tweet this quote"><img src="img/twitter.png" alt="Tweet">
+        <a href="#" class="button" id="twitter" title="Tweet this quote"><img src="img/twitter.png" alt="Tweet">
         </a>
     </div>
     
